--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
                   alt="Imagem do jogo GTA"
               /></a>
             </li>
+            <li>
+              <a
+                target="_blank"
+                href="https://www.twitch.tv/directory/game/Dead%20by%20Daylight"
+                ><img
+                  src="https://static-cdn.jtvnw.net/ttv-boxart/491487-285x380.jpg"
+                  alt="Imagem do jogo DBD"
+              /></a>
+            </li>
           </ul>
         </div>
       </section>
